[#281] Increased padding-right on .resource-item to fix overflow issue

--- a/ckan/public/base/less/dataset.less
+++ b/ckan/public/base/less/dataset.less
@@ -137,7 +137,7 @@
 
 .resource-item {
   position: relative;
-  padding: 10px 110px 10px 60px;
+  padding: 10px 207px 10px 60px;
   margin-bottom: 0px;
   .border-radius(2px);
   &:hover {
